--- a/index.html
+++ b/index.html
@@ -178,20 +178,22 @@
                 </ul>
 
                 <!-- Tab panes -->
-                <div class="tab-content">
+                <div class="tab-content mb-4">
                     <div class="tab-pane container active" id="home">
-                        <div class="row" id="products-list-1"></div>
+                        <h3 class="text-center fs-4">We provide <span class="fw-bold text-danger">All Products</span> of Food Offers</h3>
                     </div>
                     <div class="tab-pane container fade" id="menu1">
-                        <div class="row" id="products-list-2"></div>
+                        <h3 class="text-center fs-4">We provide <span class="fw-bold text-danger">Fresh Meat</span> of Food Offers</h3>
                     </div>
                     <div class="tab-pane container fade" id="menu2">
-                        <div class="row" id="products-list-3"></div>
+                        <h3 class="text-center fs-4">We provide <span class="fw-bold text-danger">Fresh Vegetables</span> of Food Offers</h3>
                     </div>
                     <div class="tab-pane container fade" id="menu3">
-                        <div class="row" id="products-list-4"></div>
+                        <h3 class="text-center fs-4">We provide <span class="fw-bold text-danger">Biscuits Snack</span> of Food Offers</h3>
                     </div>
                 </div>
+
+                <div class="row" id="products-list-1"></div>
             </div>
         </div>
 
@@ -208,37 +210,119 @@
                             <h4 class="sub">~ The Best For Your ~</h4>
                             <h2 class="title">Organic Drinks</h2>
                             <h2 class="title2"><span>Easy Healthy</span> - Happy Life</h2>
-                            <p class="desc">The liber tempor cum soluta nobis eleifend option congue doming quod mazim placerat facer possim assum.</p>
                         </div>
                         <div class="list">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h3 class="name">FRESH FRUITS:</h3>
-                                    <p class="desc">Apples, Berries & Cherries</p>
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingOne">
+                                        <button
+                                            class="accordion-button"
+                                            type="button"
+                                            data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne"
+                                            aria-expanded="true"
+                                            aria-controls="collapseOne"
+                                        >
+                                            Reduced cancer risk
+                                        </button>
+                                    </h2>
+                                    <div
+                                        id="collapseOne"
+                                        class="accordion-collapse collapse show"
+                                        aria-labelledby="headingOne"
+                                        data-bs-parent="#accordionExample"
+                                    >
+                                        <div class="accordion-body">
+                                            <strong class="text-danger">According</strong> to the National Cancer InstituteTrusted Source, there are
+                                            laboratory and animal studies that link certain <strong class="text-danger">antioxidants</strong> to a
+                                            reduced incidence of free radical damage due to cancer. However, human trials are inconclusive and doctors
+                                            advise against using these dietary supplements without consulting them first.
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <h3 class="name">INGREDIENT:</h3>
-                                    <p class="desc">Energy, Protein, Sugars</p>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingTwo">
+                                        <button
+                                            class="accordion-button collapsed"
+                                            type="button"
+                                            data-bs-toggle="collapse"
+                                            data-bs-target="#collapseTwo"
+                                            aria-expanded="false"
+                                            aria-controls="collapseTwo"
+                                        >
+                                            Improved gut health
+                                        </button>
+                                    </h2>
+                                    <div
+                                        id="collapseTwo"
+                                        class="accordion-collapse collapse"
+                                        aria-labelledby="headingTwo"
+                                        data-bs-parent="#accordionExample"
+                                    >
+                                        <div class="accordion-body">
+                                            A diet high in fiber may <strong class="text-danger">decreaseTrusted</strong> Source inflammation in the
+                                            gut. A diet rich in fibrous vegetables, fruits, legumes, and whole grains may provide a combination of
+                                            prebiotics and probiotics that help good bacteria thrive in the colon.
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <h3 class="name">EXPIRY DATE:</h3>
-                                    <p class="desc">See on The Bottle Cap</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="name">BOOTLE SIZE:</h3>
-                                    <p class="desc">500ml – 1000ml</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="name">FRESH FRUITS:</h3>
-                                    <p class="desc">Apples, Berries & Cherries</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="name">INGREDIENT:</h3>
-                                    <p class="desc">Energy, Protein, Sugars</p>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="headingThree">
+                                        <button
+                                            class="accordion-button collapsed"
+                                            type="button"
+                                            data-bs-toggle="collapse"
+                                            data-bs-target="#collapseThree"
+                                            aria-expanded="false"
+                                            aria-controls="collapseThree"
+                                        >
+                                            Improved memory
+                                        </button>
+                                    </h2>
+                                    <div
+                                        id="collapseThree"
+                                        class="accordion-collapse collapse"
+                                        aria-labelledby="headingThree"
+                                        data-bs-parent="#accordionExample"
+                                    >
+                                        <div class="accordion-body">
+                                            <strong class="text-danger">According</strong> to the National Cancer InstituteTrusted Source, there are
+                                            laboratory and animal studies that link certain <strong class="text-danger">antioxidants</strong> to a
+                                            reduced incidence of free radical damage due to cancer. However, human trials are inconclusive and doctors
+                                            advise against using these dietary supplements without consulting them first.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-primary rounded-pill">Add to cart</button>
+
+                            <button type="button" class="btn btn-primary rounded-pill fw-bold" data-bs-toggle="modal" data-bs-target="#myModal">
+                                VIEW VIDEO
+                            </button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">VIDEO</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <iframe
+                            width="100%"
+                            height="400"
+                            src="https://www.youtube.com/embed/QlSNNvEs6eM?si=3k81psCOAofF_cgL"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                        ></iframe>
                     </div>
                 </div>
             </div>
@@ -247,7 +331,7 @@
         <div class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card rounded-5">
                             <img class="card-img-top" src="img/banner-1.jpg" alt="Card image" />
                             <div class="card-img-overlay">
@@ -257,7 +341,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card rounded-5">
                             <img class="card-img-top" src="img/banner-2.jpg" alt="Card image" />
                             <div class="card-img-overlay">
@@ -267,7 +351,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card rounded-5">
                             <img class="card-img-top" src="img/banner-3.jpg" alt="Card image" />
                             <div class="card-img-overlay">
@@ -338,7 +422,9 @@
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3">
                         <h3 class="title">LET US HELP YOU</h3>
-                        <div class="email">If you have any question, please contact us at: <a href="mailto:support@example.com">support@example.com</a></div>
+                        <div class="email">
+                            If you have any question, please contact us at: <a href="mailto:support@example.com">support@example.com</a>
+                        </div>
 
                         <div class="social">
                             <h4 class="text">Social Media:</h4>
